--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "ts-node-dev src/app.ts",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "redb": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/config/setup/createDatabase.ts"
   },
   "author": "Henricus Wouter de Vos",
   "license": "",
