--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "budgeting-app",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -18,7 +18,7 @@
     "@types/node": "12.6.8",
     "@types/nodemailer": "6.4.0",
     "@types/uuid": "3.4.5",
-    "bcrypt": "5.0.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "1.19.0",
     "dotenv": "7.0.0",
     "eslint": "^7.19.0",
@@ -31,6 +31,7 @@
     "html": "1.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "8.5.1",
+    "knex": "^0.95.4",
     "lodash": "4.17.19",
     "mysql": "^2.18.1",
     "nodemailer": "6.4.10",
