--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "ts-node-dev src/app.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "redb": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/config/setup/createDatabase.ts"
+    "redb": "knex migrate:rollback && knex migrate:latest && knex seed:run && npm run start"
   },
   "author": "Henricus Wouter de Vos",
   "license": "",
