--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "author": "Henricus Wouter de Vos",
+  "license": "",
+  "private": true,
   "scripts": {
     "start": "ts-node-dev src/app.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "redb": "knex migrate:rollback && knex migrate:latest && knex seed:run && npm run start"
   },
-  "author": "Henricus Wouter de Vos",
-  "license": "",
   "dependencies": {
     "@types/body-parser": "1.17.0",
     "@types/dotenv": "6.1.1",
