--- a/backend/package.json
+++ b/backend/package.json
@@ -33,13 +33,12 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "8.5.1",
     "knex": "^0.95.4",
-    "lodash": "4.17.19",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
-    "nodemailer": "6.4.10",
     "prettier": "^2.2.1",
     "ts-node": "8.9.0",
     "typescript": "3.5.3",
-    "underscore": "1.10.2",
+    "underscore": "^1.13.1",
     "uuid": "3.3.2"
   },
   "devDependencies": {
