--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "ts-node-dev src/app.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "redb": "knex migrate:rollback && knex migrate:latest && knex seed:run && npm run start"
+    "redb": "knex migrate:rollback && knex migrate:latest && knex seed:run && npm run start",
+    "test": "jest"
   },
   "dependencies": {
     "@types/body-parser": "1.17.0",
@@ -21,6 +22,7 @@
     "@types/uuid": "3.4.5",
     "bcrypt": "^5.0.0",
     "body-parser": "1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "7.0.0",
     "eslint": "^7.19.0",
     "eslint-config-node": "^4.1.0",
@@ -36,6 +38,7 @@
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "prettier": "^2.2.1",
+    "ts-loader": "^9.2.3",
     "ts-node": "8.9.0",
     "typescript": "3.5.3",
     "underscore": "^1.13.1",
@@ -43,6 +46,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.4",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.1"
   }
 }
